GNOME Bugzilla – Bug 736763
Initial set of input sources is wrong when changing locale
Last modified: 2014-09-17 14:52:04 UTC
When changing the locale in the first page, the initial set of input sources that shows up in the second page isn't the appropriate for the locale chosen. This happens because the input chooser code checks the current locale when it gets constructed but it gets the previous locale. See the patch.
Created attachment 286314 [details] [review] language: Emit locale changed signal only after everything else This signal is used to rebuild all pages and they might want to check the current language during initialization so we should only emit it after we set everything.
Review of attachment 286314 [details] [review]: good catch. please ask for a freeze break
Attachment 286314 [details] pushed as 467e8b9 - language: Emit locale changed signal only after everything else