language: Emit locale changed signal only after everything else

This signal is used to rebuild all pages and they might want to check
the current language during initialization so we should only emit it
after we set everything.

https://bugzilla.gnome.org/show_bug.cgi?id=736763