gnome-initial-setup/pages/language/gis-language-page.c
@@ -121,7 +121,6 @@ language_changed (CcLanguageChooser  *chooser,
 
   setlocale (LC_MESSAGES, priv->new_locale_id);
   gtk_widget_set_default_direction (gtk_get_locale_direction ());
-  gis_driver_locale_changed (driver);
 
   if (gis_driver_get_mode (driver) == GIS_DRIVER_MODE_NEW_USER) {
       if (g_permission_get_allowed (priv->permission)) {
@@ -148,6 +147,8 @@ language_changed (CcLanguageChooser  *chooser,
 
   gis_welcome_widget_show_locale (GIS_WELCOME_WIDGET (priv->welcome_widget),
                                   priv->new_locale_id);
+
+  gis_driver_locale_changed (driver);
 }
 
 static void
